finally made devise work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rails Template</title>
+    <title>Dating app</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+      <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %><br>
+      <%= link_to 'sign_in', new_user_session_path %><br>
+      <%= link_to 'sign_up', new_user_registration_path %>
+      <%= yield %>
   </body>
 </html>
