--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,14 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-      <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %><br>
-      <%= link_to 'sign_in', new_user_session_path %><br>
-      <%= link_to 'sign_up', new_user_registration_path %>
+
+      <%= link_to 'Home', '/home' %> |
+      <%= link_to 'About', '/about' %> |
+      <%= link_to 'Help', '/help' %> |
+      <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %> |
+      <%= link_to 'Sign_In', new_user_session_path %> |
+      <%= link_to 'Sign_Up', new_user_registration_path %>
+
       <%= yield %>
   </body>
 </html>
