--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,21 +6,43 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= render partial: "shared/cdn_assets" %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
 
+  <div class="container">
+
+    <% if current_user != nil %>
       <%= link_to 'Home', '/home' %> |
       <%= link_to 'About', '/about' %> |
       <%= link_to 'Help', '/help' %> |
       <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %> |
+      <%= link_to 'Edit', edit_user_registration_path %>
+
+    <% else %>
+
+      <%= link_to 'Home', '/home' %> |
+      <%= link_to 'About', '/about' %> |
+      <%= link_to 'Help', '/help' %>  |
       <%= link_to 'Sign_In', new_user_session_path %> |
-      <%= link_to 'Sign_Up', new_user_registration_path %>
+      <%= link_to "Sign Up", new_user_registration_path %>
+
+    <% end %>  
+
+      <% if notice.present? %>
+            <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
+          <% end %>
+
+          <% if alert.present? %>
+            <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
+          <% end %>
 
       <%= yield %>
-  </body>
+    
+    </div>
+</body>
 </html>
