--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,1 +1,13 @@
-Help
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Singles | Help</title>
+  </head>
+  <body>
+    <header>
+      <h1>This is Help page</h1>
+    </header>
+  </body>
+</html>
