--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Singles | Home</title>
-  </head>
-  <body>
-    <header>
-      <h1>This is Home page</h1>
-    </header>
-  </body>
-</html>
+<% provide(:title, "Home") %>
+  <h1>This is Home page</h1>
+  
