--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
     <div class="container">
       <%= render partial: "shared/navbar" %>
     </div>
+      <div class="container">
+      <h1 id="main_h1"><%= yield :h1 %></h1>
+      </div>
+    
     <div class="container">
       <% if notice.present? %>
         <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
@@ -25,9 +29,13 @@
       <% if alert.present? %>
         <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
       <% end %>
-
-    <%= yield %>
+      <div id="left">
+      <%= render partial: "shared/sidebar" %>
+      </div>
+    <div id="right">
+      <%= yield %>
     
+    </div>
     </div>
   </body>
 </html>
