--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,42 +14,42 @@
  *= require_self
  */
 
- .sidebar {
-    width: 250px;
-    font-size: 1.5em;
-  }
-
- .sidebar a {
-  text-decoration: none;
+ h1 {
+   margin-top: 10px;
+   margin-bottom: 25px;
+   text-align: center;
+   font-size: 3.5em;
  }
 
- .sidebar ul {
-  list-style-type: none;
+ article {
+   font-family: 'Dancing Script', cursive;
+   font-family: 'Indie Flower', cursive;
+  padding: 25px;
+  width: 100%;
  }
 
- #left {
-  background-color: aquamarine;
-  display: block;
-  float: left;
+ article h2 {
+    text-align: center;
+    font-size: 2em;
  }
 
- #right {
-  width: 80%;
-  float: right;
-  background-color: blanchedalmond;
-  display: block;
-  padding: 20px;
- }
-
- h1#main_h1 {
-  margin-bottom: 25px;
-  text-align: center;
-  background-color: brown;
- }
- @media(min-width: 0px) and (max-width: 900px) {
-    #right, #left {
-      float: none;
-      width: 100%;
-    }
+ article p {
+   font-size: 1.5em;
  }
  
+ div#buttons {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 10px;
+ }
+
+ .btn {
+   color: darkblue;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ }
+
+ body {
+   background-image: url("background.jpg");
+ }
