--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -15,8 +15,8 @@
   </p>
 
   <p>
-    <strong>Closed by reseiver:</strong>
-    <%= chat.closed_by_reseiver %>
+    <strong>Closed by receiver:</strong>
+    <%= chat.closed_by_receiver %>
   </p>
 
 </div>
