--- a/app/views/chats/_form.html.erb
+++ b/app/views/chats/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <%= form.label :closed_by_reseiver, style: "display: block" %>
+    <%= form.label :closed_by_receiver, style: "display: block" %>
     <%= form.check_box :closed_by_reseiver %>
   </div>
 
