--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Chats") %>
-<% content_for :h1, 'These are my chats' %>
+<% content_for :h1, 'My chats' %>
 
 <div id="chats">
   <% @chats.each do |chat| %>
@@ -27,4 +27,3 @@
     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
   </div>
 </div>
-
