--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Favorites") %>
-<% content_for :h1, 'These are your favorites' %>
+<% content_for :h1, 'My favorites' %>
 
 <div id="favorites">
   <% @favorites.each do |favorite| %>
