--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,43 +1,14 @@
-.sidebar {
-  width: 250px;
-  font-size: 1.5em;
-}
-
-.sidebar a {
-  text-decoration: none;
-}
-
-.sidebar ul {
-  list-style-type: none;
-}
-
-#left {
-  background-color: aquamarine;
-  display: block;
-  float: left;
-}
-
-#right {
-  width: 80%;
-  float: right;
-  background-color: blanchedalmond;
-  display: block;
-  padding: 20px;
-}
-
-h1#main_h1 {
+h1 {
   margin-bottom: 25px;
   text-align: center;
   background-color: cornflowerblue;
-}
-
-@media (min-width: 0px) and (max-width: 900px) {
-  #right, #left {
-      float: none;
-      width: 100%;
-  }
+  font-family: 'Indie Flower', cursive;
 }
 
 h5 {
   font-family: 'Indie Flower', cursive;
+}
+
+div.container {
+ 
 }
