--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,17 +1,19 @@
 <h1>This is a list of all the profiles</h1>
 <div class="container pb-2">
-<% @profiles.each do |profile| %>
+<% @profiles.order(:bio => :asc).each do |profile| %>
   
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3 mx-auto" style="max-width: 540px;">
   <div class="row g-0 m-1">
     <div class="col-md-3 mb-0">
       <%= image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end m-2 mb-2") %>
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><%= profile.username.capitalize %>, <%= profile.age(profile.dob) %></h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <h5 class="card-title"><%= profile.gender[0].capitalize %>, <%= profile.username.capitalize %>, <%= profile.age(profile.dob) %></h5>
+        <p class="card-text"><%= profile.country %>, <%= profile.state %>, <%= profile.city %></p>
+        <p class="card-text"></p>
+        <p class="card-text"></p>
+        <p class="card-text"><small class="text-body-secondary"><%= profile.bio %></small></p>
       </div>
     </div>
   </div>
