--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -25,6 +25,9 @@
             <a href="/chats" class="nav-link active" aria-current="page"><i class="fa-regular fa-comment-dots" style="color: #080808;"></i>&nbsp;Chats</a>
           </li>
           <li class="nav-item">
+            <a href="/profiles" class="nav-link active" aria-current="page"><i class="fa-regular fa-address-card" style="color: #0d0d0d;"></i>&nbsp;Profiles</a>
+          </li>
+          <li class="nav-item">
             <a href="/search" class="nav-link active" aria-current="page"><i class="fa-solid fa-magnifying-glass" style="color: #080808;"></i>&nbsp;Search</a>
           </li>
           <li class="nav-item">
