--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -7,3 +7,40 @@ h1 {
 h5 {
   font-family: 'Indie Flower', cursive;
 }
+
+/* Styling the pagination container */
+.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+/* Styling the individual pagination links */
+.pagination a {
+  margin: 5px;
+  padding: 5px 10px;
+  text-decoration: none;
+  border: 1px solid #ccc;
+  background-color: #f0f0f0;
+  color: #333;
+  border-radius: 5px;
+}
+
+/* Styling the currently active page link */
+.pagination .current {
+
+  margin: 5px;
+  padding: 5px 10px;
+  text-decoration: none;
+  border: 1px solid #ccc;
+  color: #333;
+  border-radius: 5px;
+
+  background-color: #007bff;
+  color: #fff;
+}
+
+/* Styling the "previous" and "next" links */
+.pagination .previous, .pagination .next {
+  font-weight: bold;
+}
