Changed profile link icon

--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -25,7 +25,7 @@
             <a href="/chats" class="nav-link active" aria-current="page"><i class="fa-regular fa-comment-dots" style="color: #080808;"></i>&nbsp;Chats</a>
           </li>
           <li class="nav-item">
-            <a href="/profiles" class="nav-link active" aria-current="page"><i class="fa-regular fa-address-card" style="color: #0d0d0d;"></i>&nbsp;Search</a>
+            <a href="/profiles" class="nav-link active" aria-current="page"><i class="fa-solid fa-magnifying-glass" style="color: #0a0a0a;"></i>&nbsp;Search</a>
           </li>
           <li class="nav-item">
             <a href="/favorites" class="nav-link active" aria-current="page"><i class="fa-regular fa-star" style="color: #050505;"></i>&nbsp;Favorites</a>
