--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,5 +1,26 @@
 <% provide(:title, "Home") %>
-<% content_for :h1, 'New users in your area' %>
 
-<h2>Will add new users here</h2>
-  
+<h1>New users in your area</h1>
+
+<div class="container">
+  <% @profiles.order(:created_at => :desc).each do |profile| %>
+
+  <div class="card mb-3 mx-auto" style="max-width: 540px;">
+          <div class="row g-0 m-1">
+            <div class="col-md-3 mb-1">
+              <%=  image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end m-2 mb-2")  %>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><%=  profile.gender[0].capitalize  %>, <%= profile.username.capitalize %>
+                  , <%=  profile.age  %></h5>
+                <p class="card-text"><%=  profile.country  %>, <%=  profile.state  %>, <%=  profile.city  %></p>
+                <p class="card-text"><small class="text-body-secondary">Joined <%= time_ago_in_words(profile.created_at) %> ago</small></p>
+              </div>
+            </div>
+          </div>
+  </div>
+  <%  end %>
+  <%= will_paginate @profiles %>
+</div>
+
