many improvements, big progress on UI

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -2,3 +2,27 @@
 <% content_for :h1, 'My chats' %>
 
 <p>Here all my chats</p>
+
+<button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#1">Send a message</button>
+
+<div class="modal fade" id="1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <% Chat.where(:id => 1).where("sender_id = ? OR receiver_id = ?", current_user.id, current_user.id).each do |chat| %>
+          <% Message.where(:chat_id => chat.id).each do |message| %>
+            <%= message.content %><br>
+          <% end %>
+        <% end %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
