--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -151,32 +151,6 @@
 
           <hr class="mt-4">
 
-          <div class="form-group">
-            <% username_was_invalid = resource.errors.include?(:username) %>
-
-            <% username_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if username_was_invalid %>
-                <% username_class << " is-invalid" %>
-              <% else %>
-                <% username_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :username %>
-
-            <%= f.text_field :username, :class => username_class, :placeholder => "Enter username" %>
-            <br>
-            <% if username_was_invalid %>
-              <% resource.errors.full_messages_for(:username).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-
           <%= f.submit "Update", class: "btn btn-block btn-outline-primary" %><br>
         <% end %>
 
@@ -184,7 +158,7 @@
       </div>
 
       <div class="card-footer">
-        <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, class: "btn btn-block btn-link", data: { turbo_method: :delete } %>
+        <%= link_to "Cancel my account", registration_path(resource_name), class: "btn btn-block btn-link", data: { turbo_method: :delete } %>
       </div>
     </div>
   </div>
