--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,140 +1,34 @@
-<div class="row">
-  <div class="offset-md-3 col-md-6">
-    <div class="card mb-3">
-      <h5 class="card-header">
-        <%= resource_name != "user" ? resource_name.to_s.titleize : "" %> Sign Up
-      </h5>
+<h2>Sign up</h2>
 
-      <div class="card-body">
-        <% if flash[:notice].present? %>
-          <div class="alert alert-info" role="alert">
-            <%= flash[:notice] %>
-          </div>
-        <% end %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource %>
 
-        <% if flash[:alert].present? %>
-          <div class="alert alert-danger" role="alert">
-            <%= flash[:alert] %>
-          </div>
-        <% end %>
-        
-        <% was_validated = resource.errors.any? %>
-
-        <% form_html_options = { novalidate: true, class: "mb-3" } %>
-
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: form_html_options) do |f| %>
-          <div class="form-group">
-            <% email_was_invalid = resource.errors.include?(:email) %>
-
-            <% email_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if email_was_invalid %>
-                <% email_class << " is-invalid" %>
-              <% else %>
-                <% email_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :email %>
-
-            <%= f.email_field :email, class: email_class, autofocus: true %>
-
-            <% if email_was_invalid %>
-              <% resource.errors.full_messages_for(:email).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-
-          <div class="form-group">
-            <% username_was_invalid = resource.errors.include?(:username) %>
-
-            <% username_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if username_was_invalid %>
-                <% username_class << " is-invalid" %>
-              <% else %>
-                <% username_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :username %>
-
-            <%= f.text_field :username, :class => username_class, :placeholder => "Enter username" %>
-
-            <% if username_was_invalid %>
-              <% resource.errors.full_messages_for(:username).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-
-          <div class="form-group">
-            <% password_was_invalid = resource.errors.include?(:password) %>
-
-            <% password_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if password_was_invalid %>
-                <% password_class << " is-invalid" %>
-              <% else %>
-                <% password_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :password %>
-
-            <%= f.password_field :password, class: password_class %>
-
-            <% if password_was_invalid %>
-              <% resource.errors.full_messages_for(:password).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div>
-
-          <div class="form-group">
-            <% password_confirmation_was_invalid = resource.errors.include?(:password_confirmation) %>
-
-            <% password_confirmation_class = "form-control" %>
-
-            <% if was_validated %>
-              <% if password_confirmation_was_invalid %>
-                <% password_confirmation_class << " is-invalid" %>
-              <% else %>
-                <% password_confirmation_class << " is-valid" %>
-              <% end %>
-            <% end %>
-
-            <%= f.label :password_confirmation %>
-
-            <%= f.password_field :password_confirmation, class: password_confirmation_class %>
-
-            <% if password_confirmation_was_invalid %>
-              <% resource.errors.full_messages_for(:password_confirmation).each do |message| %>
-                <div class="invalid-feedback d-flex">
-                  <%= message %>
-                </div>
-              <% end %>
-            <% end %>
-          </div><br>
-          
-          <div>
-            <%= f.button class: "btn btn-outline-primary btn-block" %>
-          </div>
-          <hr>
-
-          <%= render "devise/shared/links" %>
-        <% end %>
-      </div>
-    </div>
+  <div class="field">
+    <p><%= f.label :email %></p>
+    <p><%= f.email_field :email, autofocus: true, autocomplete: "email" %></p>
   </div>
-</div>
+
+  <div class="field">
+    <p><%= f.label :username %></p>
+    <p><%= f.text_field :username, autofocus: true, autocomplete: "username" %></p>
+  </div>
+
+  <div class="field">
+    <p><%= f.label :password %></p>
+    <% if @minimum_password_length %>
+      <p><em>(<%= @minimum_password_length %> characters minimum)</em></p>
+    <% end %>
+    <p><%= f.password_field :password, autocomplete: "new-password" %></p>
+  </div>
+
+  <div class="field">
+    <p><%= f.label :password_confirmation %></p>
+    <p><%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
+  </div>
+
+  <div class="actions">
+    <%= f.submit "Sign up" %>
+  </div>
+<% end %>
+
+<%= render "devise/shared/links" %>
