--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -3,22 +3,15 @@
   <% @profiles.order(:bio => :asc).each do |profile| %>
     <div class="card mb-3 mx-auto" style="max-width: 540px;">
       <div class="row g-0 m-1">
-        <div class="col-md-3 mb-1">
-          <%= image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end m-2 mb-2") %>
+        <div class="col-md-3">
+         <%= image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end", style: "max-width: 100%;") %>
         </div>
         <div class="col-md-8">
-          <div class="card-body">
+          <div class="card-body m-3">
             <h5 class="card-title"><%= profile.username.capitalize %>, <%= profile.age %></h5>
-
-
-
-
             <p class="card-text">
               <%= profile.country %>, <%= profile.state %>, <%= profile.city %>
             </p>
-
-
-            <p class="card-text"><%= profile.bio %></p>
 
             <div class="dropdown dropend">
               <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
