--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,30 +1,41 @@
 <h1>Search by parameters</h1>
 <div class="container">
   <% @profiles.order(:bio => :asc).each do |profile| %>
-    <div class="card mb-3 mx-auto" style="max-width: 540px;">
+    <div class="card mb-3 mx-auto p-2" style="max-width: 540px;">
       <div class="row g-0 m-1">
         <div class="col-md-3">
-         <%= image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end", style: "max-width: 100%;") %>
+          <%= image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end", style: "max-width: 100%;") %>
         </div>
         <div class="col-md-8">
-          <div class="card-body m-3">
+          <div class="card-body m-3 text-center">
             <h5 class="card-title"><%= profile.username.capitalize %>, <%= profile.age %></h5>
             <p class="card-text">
               <%= profile.country %>, <%= profile.state %>, <%= profile.city %>
             </p>
 
-            <div class="dropdown dropend">
+            <div class="dropdown drop-top">
               <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                 Options
               </a>
 
               <ul class="dropdown-menu" style="background-color: gainsboro" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.id %>"><i class="fa-solid fa-eye" style="color: #585555;"></i>&nbsp;Quick preview</a></li>
-                <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.username %>"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send a message</a></li>
-                <li><a class="dropdown-item" href="#"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See full profile</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-star" style="color: #02f740;"></i>&nbsp;Add to favorites</a></li>
-                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-lock" style="color: #f50505;"></i>&nbsp;Block</a></li>
+                <li>
+                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.id %>"><i class="fa-solid fa-eye" style="color: #585555;"></i>&nbsp;Quick
+                    preview</a></li>
+                <li>
+                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.username %>"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send
+                    a message</a></li>
+                <li><a class="dropdown-item" href="#"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See
+                  full profile</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#"><i class="fa-solid fa-star" style="color: #02f740;"></i>&nbsp;Add to
+                    favorites</a></li>
+                <li>
+                  <a class="dropdown-item" href="#"><i class="fa-solid fa-lock" style="color: #f50505;"></i>&nbsp;Block</a>
+                </li>
               </ul>
             </div>
 
