made some progress with functionality and ui

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -25,7 +25,7 @@
                 <li>
                   <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.username %>"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send
                     a message</a></li>
-                <li><a class="dropdown-item" href="#"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See
+                <li><a class="dropdown-item" href="profiles/<%= profile.id %>"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See
                   full profile</a></li>
                 <li>
                   <hr class="dropdown-divider">
