--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -2,3 +2,17 @@
 
 <h1>My dashboard</h1>
 
+<div class="container">
+  <h1><%= current_user.username.capitalize + ", " %><%= current_user.age %></h1><br>
+  <div class="row">
+    <div class="col-3">
+      <%= image_tag(current_user.avatar, class: "img-fluid img-thumbnail rounded float-start", alt: "An example image", style: "max-width: 200px;") %>
+    </div>
+    <div class="col">
+
+
+      <h3><%= current_user.city + ", "%><%= current_user.state + ", " %><%= current_user.country %></h3>
+      <h4>Bio:</h4><%= current_user.bio %>
+    </div>
+  </div>
+</div>
