--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,9 +49,16 @@
               <i class="fa-solid fa-user"></i>&nbsp;<%= current_user.email %>
             </a>
             <div class="dropdown-menu">
-              <%= link_to "View profile", "#", class: "dropdown-item" %>
-              <%= link_to "Edit profile", edit_user_registration_path, class: "dropdown-item" %>
-              <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
+              <%= link_to "/dashboard", class: "dropdown-item" do %>
+                <i class="fa-solid fa-eye" style="color: #585555;"></i>&nbsp;View profile
+              <% end %>
+              <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+                <i class="fa-solid fa-pen-to-square" style="color: #585555;"></i>&nbsp;Edit profile
+              <% end %>
+
+              <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" do %>
+                <i class="fa-solid fa-right-from-bracket" style="color: #585555;"></i>&nbsp;Sign out
+              <% end %>
             </div>
           </li>
 
