--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -14,3 +14,8 @@
     </div>
   </div>
 </div>
+
+<% result = ActiveRecord::Base.connection.exec_query("SELECT DISTINCT C5 FROM us_cities_states_counties WHERE C2 = 'IL' ORDER BY C5 ASC") %>
+<% result.each do |r| %>
+  <p><%= r.fetch("C5") %>
+<% end %>
