--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -37,7 +37,10 @@
     <div class="card mb-3 mx-auto p-2" style="max-width: 540px;">
       <div class="row g-0 m-1">
         <div class="col-md-3">
-          <%= image_tag("#{profile.avatar}", alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end", style: "max-width: 100%;") %>
+          <%= link_to "profiles/#{profile.id}" do %>
+            <%= image_tag(profile.avatar, alt: "#{profile.username.capitalize}'s photo", class: "img-fluid rounded-start rounded-end", style: "max-width: 100%;") %>
+          <% end %>
+
         </div>
         <div class="col-md-8">
           <div class="card-body m-3 text-center">
